--- a/Menu/Menu.csproj
+++ b/Menu/Menu.csproj
@@ -9,8 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <ProjectReference Include="..\Bai4\Bai4.csproj" />
+    <ProjectReference Include="..\Bai5\Bai5.csproj" />
+    <ProjectReference Include="..\Bai6\Bai6.csproj" />
   </ItemGroup>
 
 </Project>
